# spsu-mm-programming-first-course

./: .gitignore  ChunkedDynamicArray.c  README.md
Autumn/: list.c  list.h  str_funcs.h
ControlWork/: ControlWork.sln
Hometask 1/: Hometask 1.sln
Hometask 10/: Hometask 10.sln
Hometask 10+/: Hometask 10+.sln
Hometask 11/: Hometask 11.sln
Hometask 12/: Hometask 12.sln
Hometask 2/: Hometask 2.sln
Hometask 2+/: Hometask 2+.sln
Hometask 3/: Hometask 3.sln
Hometask 4/: Hometask 4.vcxproj  main.c
Hometask 4+/: Hometask 4+.sln
Hometask 5/: Hometask 5.sln
Hometask 5+/: Hometask 5+.sln
Hometask 6/: Hometask 6.sln
Hometask 7/: Hometask 7.sln
Hometask 7+/: Hometask 7+.sln
Hometask 8/: Hometask 8.cbp  Hometask 8.sln  (+3 more)
Spring/Task 2 (Hierarchy)/: CMakeLists.txt  README.md
Spring/Task 2 (Hierarchy)/sources/: main.cpp
Spring/Task 2 (Hierarchy)/sources/ice_cream/: ice_cream.cpp  ice_cream.h
Spring/Task 2 (Hierarchy)/sources/ice_cream/fruit_ice/: fruit_ice.cpp  fruit_ice.h
Spring/Task 2 (Hierarchy)/sources/ice_cream/milky_ice_cream/: milky_ice_cream.cpp  milky_ice_cream.h
Spring/Task 2 (Hierarchy)/sources/ice_cream/milky_ice_cream/ice_cream_cone/: ice_cream_cone.cpp  ice_cream_cone.h
Spring/Task 2 (Hierarchy)/sources/ice_cream/milky_ice_cream/shaved_ice/: shaved_ice.cpp  shaved_ice.h
Spring/Task 2 (Hierarchy)/sources/ingredient/: ingredient.cpp  ingredient.h
Spring/Task 2 (Hierarchy)/src/: Main.java
Spring/Task 2 (Hierarchy)/src/icecream/: FruitIce.java  IceCream.java  IceCreamCone.java  Ingredient.java  MilkyIceCream.java  ShavedIce.java
(+1731 files in other folders)
